增加小提示，显示完整的文本

--- a/src/renderer/src/components/Result/styles.scss
+++ b/src/renderer/src/components/Result/styles.scss
@@ -1,3 +1,11 @@
 .choosed {
-  @apply bg-amber-200
+  @apply bg-amber-200;
+}
+
+.selected-content {
+  @apply whitespace-normal break-words overflow-hidden ml-[23px] mb-3 pr-6 text-sm block;
+}
+
+.no-selected-hidden {
+  @apply hidden;
 }
